--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <h3>Education</h3>
   <ul>
     <li><a href="https://caehs.buncombeschools.org/"><strong>Clyde A. Erwin High School</strong></a></li>
-    <li><a href="https://abtech.edu/"><strong>Asheville-Buncome Technical Community College</strong></a></li>
+    <li><a href="https://abtech.edu/"><strong>Asheville-Buncombe Technical Community College</strong></a></li>
   </ul>
   <a href="Experience.html"><strong>
       <h3>Experience</h3>
